--- a/PositivoUniversity/Calculadora_v1/app/src/main/res/layout/activity_main.xml
+++ b/PositivoUniversity/Calculadora_v1/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="7"
             android:textSize="24sp" />
 
@@ -49,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="8"
             android:textSize="24sp" />
 
@@ -57,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="9"
             android:textSize="24sp" />
 
@@ -83,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="4"
             android:textSize="24sp" />
 
@@ -91,6 +95,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="5"
             android:textSize="24sp" />
 
@@ -99,6 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="6"
             android:textSize="24sp" />
 
@@ -124,6 +130,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="1"
             android:textSize="24sp" />
 
@@ -132,6 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="2"
             android:textSize="24sp" />
 
@@ -140,6 +148,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickNumeros"
             android:text="3"
             android:textSize="24sp" />
 
@@ -162,20 +171,21 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn0"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="0"
-            android:textSize="24sp" />
-
-        <Button
             android:id="@+id/btnVirgula"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text=","
-            android:textSize="30sp"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/btn0"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:onClick="onClickNumeros"
+            android:text="0"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <Button
